--- a/web/package.json
+++ b/web/package.json
@@ -13,7 +13,8 @@
     "axios": "^1.2.1",
     "element-ui": "^2.15.12",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
